--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,7 +76,7 @@ spring:
                 name: orderCircuitBreaker
   redis:
     connect-timeout: 2s
-    host: localhost
+    host: polar-redis
     port: 6379
     timeout: 1s
   session:
