--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,6 +84,8 @@ spring:
     timeout: 10m
     redis:
       namespace: polar:edge
+  keycloak:
+    server-url: http://localhost:8080
   security:
     oauth2:
       client:
@@ -94,7 +96,11 @@ spring:
             scope: openid,roles
         provider:
           keycloak:
-            issuer-uri: http://localhost:8080/realms/PolarBookshop
+            issuer-uri: ${spring.keycloak.server-url}/realms/PolarBookshop
+      resourceserver:
+        jwt:
+          issuer-uri: ${spring.keycloak.server-url}/realms/PolarBookshop
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
 resilience4j:
   circuitbreaker:
