--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ ext {
 	set('otelVersion', "1.17.0")
 	set('springCloudVersion', "2021.0.3")
 	set('testcontainersVersion', "1.17.3")
+	set('springDocOpenApiVersion', "1.6.12")
 }
 
 dependencies {
@@ -28,6 +29,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.session:spring-session-data-redis'
+	implementation "org.springdoc:springdoc-openapi-ui:${springDocOpenApiVersion}"
+	implementation "org.springdoc:springdoc-openapi-security:${springDocOpenApiVersion}"
 
 	runtimeOnly 'io.github.resilience4j:resilience4j-micrometer'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
